package main

import (
    "context"
    "net"
    "testing"
    "time"

    "github.com/google/uuid"
    "google.golang.org/grpc"
    "google.golang.org/grpc/test/bufconn"
    pb "path/to/generated/ninep" // Adjust the import path for generated protobuf files.
    "github.com/stretchr/testify/require"
)

// Mock server implementation.
type mockServer struct {
    pb.UnimplementedNinePServiceServer
}

// Implement the Walk method for testing purposes.
func (s *mockServer) Walk(ctx context.Context, req *pb.WalkRequest) (*pb.WalkResponse, error) {
    // Return example GUIDs.
    guids := []string{uuid.New().String(), uuid.New().String()}
    return &pb.WalkResponse{Guids: guids}, nil
}

// Setup a buffered connection for testing.
const bufSize = 1024 * 1024
var lis *bufconn.Listener

func init() {
    lis = bufconn.Listen(bufSize)
    s := grpc.NewServer()
    pb.RegisterNinePServiceServer(s, &mockServer{})

    go func() {
        if err := s.Serve(lis); err != nil {
            panic("Server exited with error: " + err.Error())
        }
    }()
}

func bufDialer(context.Context, string) (net.Conn, error) {
    return lis.Dial()
}

// TestWalk tests the Walk method of the NinePService.
func TestWalk(t *testing.T) {
    ctx := context.Background()

    // Create a connection to the server using the buffer dialer.
    conn, err := grpc.DialContext(ctx, "bufnet", grpc.WithContextDialer(bufDialer), grpc.WithInsecure())
    require.NoError(t, err)
    defer conn.Close()

    client := pb.NewNinePServiceClient(conn)

    // Define test inputs.
    req := &pb.WalkRequest{
        Guid:    "some-guid",
        NewGuid: "new-guid",
        Names:   []string{"path", "to", "file"},
    }

    // Call the Walk method on the client.
    resp, err := client.Walk(ctx, req)
    require.NoError(t, err)
    require.NotNil(t, resp)
    
    // Check that the response contains the expected number of GUIDs.
    require.Len(t, resp.GetGuids(), 2)

    // Verify that GUIDs are valid.
    for _, guid := range resp.GetGuids() {
        _, err := uuid.Parse(guid)
        require.NoError(t, err, "invalid GUID returned")
    }
}

// Additional tests can be written for other methods following a similar pattern.

